--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,25 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>net.wasdev.maven.plugins.swaggerdocgen</groupId>
+	<parent>
+		<groupId>net.wasdev.maven.parent</groupId>
+		<artifactId>java7-parent</artifactId>
+		<version>1.4</version>
+		<relativePath />
+	</parent>
+
+	<groupId>net.wasdev.maven.plugins</groupId>
 	<artifactId>swaggerdocgen-maven-plugin</artifactId>
 	<version>1.0</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>Swagger Document Generator Maven Tool</name>
-	<description>Swagger Document Generator: Generates Swagger documents for WAR projects</description>
+	<description>This Maven plugin can be used to generates Swagger documents for WAR projects.</description>
 	<url>https://wasdev.github.io</url>
 
 	<licenses>
 		<license>
-			<name>The Apache Software License, Version 2.0</name>
+			<name>The Apache License, Version 2.0</name>
 			<url>https://raw.github.com/WASdev/tool.swagger.docgen/master/LICENSE</url>
 			<distribution>repo</distribution>
 		</license>
@@ -21,35 +27,39 @@
 
 	<scm>
 		<connection>scm:git:git@github.com:WASdev/tool.swagger.docgen.git</connection>
-		<developerConnection>scm:git@github.com:WASdev/tool.swagger.docgen.git</developerConnection>
+		<developerConnection>scm:git:git@github.com:WASdev/tool.swagger.docgen.git</developerConnection>
 		<url>git@github.com:WASdev/tool.swagger.docgen.git</url>
 		<tag>HEAD</tag>
 	</scm>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-enforcer-plugin</artifactId>
-				<version>1.4.1</version>
-				<executions>
-					<execution>
-						<id>enforce-java</id>
-						<goals>
-							<goal>enforce</goal>
-						</goals>
-						<configuration>
-							<rules>
-								<requireJavaVersion>
-									<version>1.7.0</version>
-								</requireJavaVersion>
-							</rules>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
+	<developers>
+		<developer>
+			<id>arturdzm</id>
+			<name>Artur Dzmitryieu</name>
+			<email>dzmitry@ca.ibm.com</email>
+		</developer>
+		<developer>
+			<id>mrglavas</id>
+			<name>Michael Glavassevich:</name>
+			<email>mrglavas@gmail.com</email>
+		</developer>
+		<developer>
+			<id>navidsh</id>
+			<name>Navid Shakibapour</name>
+			<email>navid.shakibapour@gmail.com</email>
+		</developer>
+	</developers>
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
 
 	<dependencies>
 		<dependency>
@@ -80,7 +90,72 @@
 		</dependency>
 	</dependencies>
 
+	<build>
+		<plugins>
+			<!-- Staging Maven Plugin for Deployment and Release -->
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.6</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>false</autoReleaseAfterClose>
+				</configuration>
+			</plugin>
+
+			<!-- Signing the Components with GPG -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Generating Sources Attachments -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- Generating Javadoc Attachments -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.9.1</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<swagger.jaxrs.version>1.5.6</swagger.jaxrs.version>
+		<swagger.parser.version>1.0.16</swagger.parser.version>
 	</properties>
 </project>
