--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>net.wasdev.maven.plugins</groupId>
     <artifactId>swaggerdocgen-maven-plugin</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
     <packaging>maven-plugin</packaging>
 
     <name>Swagger Document Generator Maven Tool</name>
