--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,36 @@
                 </plugins>
             </build>
         </profile>
+		<profile>
+			<id>include-dependencies</id>
+			<build>
+				<plugins>
+					 <!-- Build jar with dependencies -->
+					<plugin>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<configuration>
+							<archive>
+								<manifest>
+									<mainClass>net.wasdev.maven.plugins.swaggerdocgen.GenerateSwaggerFile</mainClass>
+								</manifest>
+							</archive>
+							<descriptorRefs>
+								<descriptorRef>jar-with-dependencies</descriptorRef>
+							</descriptorRefs>
+						</configuration>
+						<executions>
+							<execution>
+								<id>make-assembly</id>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
     </profiles>
 
 
