--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>3.3.9</version>
+			<scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
@@ -77,6 +78,7 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-project</artifactId>
             <version>2.2.1</version>
+			<scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>io.swagger</groupId>
